fix mobile overflow to big h1 on 320 device

--- a/website/less/home.less
+++ b/website/less/home.less
@@ -46,6 +46,9 @@
     font-size: 60px;
     line-height: 1;
     margin: 25px 0;
+    @media (max-width: 375px) {
+      font-size: 50px;
+    }
   }
   h2 {
     line-height: 1.2;
